<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        tools:context=".Login">

        <TextView
            android:id="@+id/tituloCadastrarCampos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/comeca"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="@string/infoCadastro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dados_usuarioCadastro"
            style="@style/ComponentesCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoCadastro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="Email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/laranja_light"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/laranja_light"
            app:layout_constraintEnd_toEndOf="@+id/dados_usuarioCadastro"
            app:layout_constraintStart_toStartOf="@+id/dados_usuarioCadastro"
            app:layout_constraintTop_toTopOf="@+id/dados_usuarioCadastro"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_LoginUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginSenha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:hint="Senha"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/laranja_light"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/laranja_light"
            app:layout_constraintEnd_toEndOf="@id/loginEmail"
            app:layout_constraintStart_toStartOf="@id/loginEmail"
            app:layout_constraintTop_toBottomOf="@id/loginEmail"
            app:startIconDrawable="@drawable/ic_cadeado"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senha_LoginUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLogin"
            style="@style/Button_Style"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/loginSenha"
            app:layout_constraintStart_toStartOf="@id/loginSenha"
            app:layout_constraintTop_toBottomOf="@id/loginSenha" />

        <TextView
            android:id="@+id/googleConta"
            style="@style/EditText"
            android:layout_marginTop="30dp"
            android:hint="@string/login_google"
            android:inputType="date"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/btLogin"
            app:layout_constraintStart_toStartOf="@id/btLogin"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />

        <ImageView
            android:id="@+id/googleContaImagem"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/googleConta"
            app:layout_constraintTop_toTopOf="@id/googleConta"
            app:srcCompat="@drawable/icon_google" />

        <TextView
            android:id="@+id/facebookConta"
            style="@style/EditText"
            android:layout_marginTop="30dp"
            android:hint="@string/login_facebook"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/googleConta"
            app:layout_constraintStart_toStartOf="@id/googleConta"
            app:layout_constraintTop_toBottomOf="@id/googleConta" />

        <ImageView
            android:id="@+id/facebookContaImagem"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/facebookConta"
            app:layout_constraintTop_toTopOf="@id/facebookConta"
            app:srcCompat="@drawable/icon_facebook" />

        <View
            android:id="@+id/linhaLogin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="30dp"
            android:background="@color/cinza_l"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="@id/btLogin"
            app:layout_constraintStart_toStartOf="@id/btLogin"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="0dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="OU"
            android:textColor="@color/cinza_l"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/btLogin"
            app:layout_constraintStart_toStartOf="@id/btLogin"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLoginCadastrar"
            style="@style/Button_Style"
            android:layout_marginTop="230dp"
            android:text="CADASTRAR"
            app:layout_constraintEnd_toEndOf="@id/btLogin"
            app:layout_constraintStart_toStartOf="@id/btLogin"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
